2004-10-02  Richard Hult  <richard@imendio.com>

	* data/ui/main-window.ui:
	* libegg/recent-files/*: Update from latest libegg CVS and add ui
	manager view from file-roller.
	
	* src/planner-window.c: (planner_window_open_recent_cb),
	(window_populate), (window_print_cb),
	(window_recent_tooltip_func): Hook up recent files again.

2004-10-02  Alvaro del Castillo <acs@barrapunto.com>  

	* configure.in: Added support for Evolution Data Server (e-d-s)
	module

	* Makefile.am: Added support for Evolution Data Server (e-d-s)
	module

	* eds-backend: new directory with all the e-d-s code

	* eds-backend/utils: code to create the sources in Evolution for
	Planner data sources.

	* eds-backend/docs: several docs about how the backend has been
	done before reaching CVS. Also testing plans and the Changelog
	before the code hit CVS.

2004-10-01  Alvaro del Castillo <acs@barrapunto.com>  

	* configure.in: Fix bad formatting for e-d-s feature

2004-09-24  Richard Hult  <richard@imendio.com>

	* src/planner-xml-planner-plugin.c: Fix up this plugin, use a
	separate gconf key for the last used dir, fix logic when adding an
	extension, use filechooser. Fixes bug #149281 and some more.

	* libplanner/mrp-time.c (mrp_time_from_tm): Try to fix a bug when
	running on solaris. Could fix bug #153643.

	* data/stylesheets/html1_gantt.xsl: Add 1 to the week
	number. Fixes bug #153170.

	* src/planner-window.c: Add locale.h to fix build for some
	systems.

2004-09-11  Richard Hult  <richard@imendio.com>

	* src/planner-print-dialog.c:
	* src/planner-table-print-sheet.c: Fix some indentation.

	* src/planner-window.c (window_print_preview_cb): Use the print
	config for the preview.
	(window_print_preview_cb): Only preview the views that are
	enabled.

	* src/planner-print-job.c (planner_print_job_new): Let gnome-print
	handle the orientation for us instead of doing it ourselves.
	
	* src/planner-gantt-print.c (planner_gantt_print_do): Fix printing